<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Shuttle</string>
    <string name="jetty_started">Shuttle started</string>
    <string name="jetty_starting">Shuttle starting</string>
    <string name="jetty_stopping">Shuttle stopping</string>
    <string name="jetty_not_started">Shuttle not started</string>
    <string name="jetty_already_started">Shuttle already running</string>
    <string name="jetty_stopped">Shuttle stopped</string>
    <string name="jetty_not_stopped">Shuttle not stopped</string>
    <string name="jetty_not_running">Shuttle not running</string>
    <string name="manage_jetty">Manage Shuttle</string>
    <string name="jetty_controller">Start and Stop Shuttle</string>
    <string name="jetty_downloader">Enter URL</string>
    <string name="start_jetty">Start Shuttle</string>
    <string name="stop_jetty">Stop Shuttle</string>
    <string name="config_jetty">Configure</string>
    <string name="start_download">Download</string>
    <string name="download_webapp">Download</string>
    <string name="loader_installed">%s installed</string>
    <string name="loader_deployed">Shuttles deployed</string>
    <string name="retry">Retry</string>
    <string name="url">URL</string>
    <string name="console">Console</string>
    <string name="i_jetty_information">i-jetty</string>
    <string name="non_ssl_category">HTTP Connector</string>
    <string name="ssl_category">HTTPS Connector</string>
    <string name="console_category">Console</string>
    <string name="pref_nio_value">true</string>
    <string name="pref_nio_title">Use NIO</string>
    <string name="pref_nio_key">net.shuttleplay.shuttle.pref_nio</string>
    <string name="pref_ssl_nio_key">net.shuttleplay.shuttle.pref_ssl_nio</string>
    <string name="pref_ssl_nio_value">true</string>
    <string name="pref_ssl_value">false</string>
    <string name="pref_ssl_title">Use SSL</string>
    <string name="pref_ssl_key">net.shuttleplay.shuttle.pref_ssl</string>
    <string name="pref_ssl_port_title">Edit Port</string>
    <string name="pref_ssl_port_value">8443</string>
    <string name="pref_ssl_port_key">net.shuttleplay.shuttle.pref.sslport</string>
    <string name="pref_ssl_port">Port</string>
    <string name="pref_port_value">8000</string>
    <string name="pref_port">Port</string>
    <string name="pref_port_title">Edit Port</string>
    <string name="pref_port_key">net.shuttleplay.shuttle.pref.port</string>

    <string name="pref_keystore_pwd_key">net.shuttleplay.shuttle.pref.keystore.pwd</string>
    <string name="pref_keystore_pwd">Keystore Password</string>
    <string name="pref_keystore_pwd_title">Edit Password</string>
    <string name="pref_keystore_pwd_value">OBF:1vny1zlo1x8e1vnw1vn61x8g1zlu1vn4</string>

    <string name="pref_keymgr_pwd_key">net.shuttleplay.shuttle.pref.keymgr.pwd</string>
    <string name="pref_keymgr_pwd">KeyStoreManager Password</string>
    <string name="pref_keymgr_pwd_title">Edit KeystoreManager Password</string>
    <string name="pref_keymgr_pwd_value">OBF:1u2u1wml1z7s1z7a1wnl1u2g</string>

    <string name="pref_keystore_file_key">net.shuttleplay.shuttle.pref.keystore.file</string>
    <string name="pref_keystore_file">Keystore Filename</string>
    <string name="pref_keystore_file_title">Edit Keystore Filename</string>
    <string name="pref_keystore_file_value">/sdcard/jetty/etc/keystore</string>

    <string name="pref_truststore_pwd_key">net.shuttleplay.shuttle.pref.truststore.pwd</string>
    <string name="pref_truststore_pwd">Truststore Password</string>
    <string name="pref_truststore_pwd_title">Edit Truststore Password</string>
    <string name="pref_truststore_pwd_value">OBF:1vny1zlo1x8e1vnw1vn61x8g1zlu1vn4</string>

    <string name="pref_truststore_file_key">net.shuttleplay.shuttle.pref.truststore.file</string>
    <string name="pref_truststore_file">Truststore Filename</string>
    <string name="pref_truststore_file_title">Edit Truststore Filename</string>
    <string name="pref_truststore_file_value">/sdcard/jetty/etc/keystore</string>

    <string name="pref_console_pwd_value">admin</string>
    <string name="pref_console_pwd">Console Password</string>
    <string name="pref_console_pwd_title">Edit Console Password</string>
    <string name="pref_console_pwd_key">net.shuttleplay.shuttle.pref.pwd</string>
    <string name="edit_preferences">Edit IJetty Settings</string>
    <string name="connector_settings">Connector settings</string>
    <string name="webapp_exists">Already Exists</string>
    <string name="download_fail">Download Failed.</string>
    <string name="download_success">Web app installed.</string>
    <string name="success">Success.</string>
    <string name="failure">Failure</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="overwrite">Replace existing file?</string>
    <string name="loading">Loading ... </string>
    <string name="context_path">Context Path</string>
    <string name="hello">Wait for a while ...</string>
    <string name="hello_ready">Share</string>
    <string name="scan">Acquire</string>
    <string name="launch_any">Launch!</string>
    <string name="forward">Forward</string>
    <string name="refresh">Refresh</string>
    <string name="first_statement">Shuttle enables free sharing&lt;br/&gt;&lt;small&gt;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp; - Click \"Start Shuttle\", ... would you find the little yellow bus?&lt;br/&gt;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp; - Click \"Stop Shuttle\"... to stop the bus and get out &lt;br/&gt;&lt;/small&gt;</string>
    <!-- <string name="first_statement">hello</string>  -->
    <string name="next_statement">Click \"Share\" to &lt;b&gt;share your cool things&lt;/b&gt;&lt;br/&gt;</string>

    <string name="last_statement">Click \"Acquire\" to get stuff by &lt;b&gt;QR code scan &lt;/b&gt;&lt;br/&gt;</string>

    
    <!-- External Storage State Messages -->
    <string name="header_sd_media"><b>External Media Unavailable</b>\n\nThe SD Card is a required part of i-jetty, and needs to be present, formatted, mounted, <u>not</u> read-only, and with sufficient space to hold the temporary files that i-jetty needs.\n\nPlease correct your SD-Card state.</string>
    <string name="sd_media_removed"><b>MEDIA_REMOVED</b>\n\nPlease replace the SD Card and try again.</string>
    <string name="sd_media_unmounted"><b>MEDIA_UNMOUNTED</b>\n\nMedia is present, but not mounted.\nSee your System Settings &gt; SD Card screen for mounting instructions.</string>
    <string name="sd_media_checking"><b>MEDIA_CHECKING</b>\n\nMedia is present, but is being disk-checked by the OS.\nPlease wait a few minutes for this process to finish and try again.</string>
    <string name="sd_media_nofs"><b>MEDIA_NOFS</b>\n\nMedia is present, but is blank or is using a filesystem type that is unsupported by the Android OS.</string>
    <string name="sd_media_mounted_read_only"><b>MEDIA_MOUNTED_READ_ONLY</b>\n\nMedia is present, and mounted, but is read-only.\nJetty requires a filesystem that it can write to.\n\nPlease correct and try again.</string>
    <string name="sd_media_shared"><b>MEDIA_SHARED</b>\n\nMedia is present, but is unavailable to Jetty as it is currently involved in USB mass storage file sharing with a desktop.\nComplete your USB mass storage sharing and try again.</string>
    <string name="sd_media_bad_removal"><b>MEDIA_BAD_REMOVAL</b>\n\nMedia is not present, and the Android OS reports that it was removed unsafely.\nPlease replace media, let Android check it, and try again.</string>
    <string name="sd_media_unmountable"><b>MEDIA_UNMOUNTABLE</b>\n\nMedia is present, but the Android OS cannot mount it.\nThis typically happens if the filesystem or media is bad or corrupted.\nReplace media and try again.</string>
    <string name="sd_unknown"><b>UNHANDLED ERROR</b>\n\nMedia state cannot be determined.\nState being reported by Android is <u>%s</u></string>
    <string name="sd_not_available">SD Not (yet) Available</string>

    <string name="msg_default_status">Place a QR code inside the viewfinder rectangle to scan it</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="wifissd">Wifi Connection</string>
    <string name="wifiip">IP address</string>
    <string name="nowifi">No connection</string>
    <string name="noip">No IP address</string>
    <string name="wifissid">Your Wifi SSID is %s</string>
    <string name="yourip">IP address is %s</string>
    <string name="shared">Total shared %d time(s)</string>
    <string name="qrcode">QR code</string>
    <string name="enter">Enter</string>
    <string name="folder">Folder</string>

</resources>
