<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:padding="4dip"
  android:gravity="center_horizontal"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">

  <ImageView
    android:src="@drawable/shuttleplay"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scaleType="fitXY" />

  <TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:textAppearance="@style/small"
    android:gravity="center"
    android:id="@+id/info"/>
      
  <TextView
     android:id="@+id/footer"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:autoLink="web"/>

    <TableLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="0"
            >

        <TableRow
                android:layout_weight="1.0"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >

            <TextView
                    android:layout_height="wrap_content"
                    android:id="@+id/wifi"
                    android:layout_weight="1.0"
                    android:layout_gravity="center"
                    android:text="@string/nowifi"/>

        </TableRow>
        <TableRow
                android:layout_weight="1.0"
                android:layout_height="wrap_content"
                >

            <TextView
                     android:layout_height="wrap_content"
                    android:id="@+id/wifiip"
                    android:layout_weight="1.0"
                    android:text="@string/noip"
                    android:layout_gravity="center"/>

        </TableRow>
        <TableRow
                android:layout_weight="1.0"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >

            <TextView
                    android:layout_height="wrap_content"
                    android:id="@+id/shared"
                    android:layout_gravity="center"
                    android:layout_weight="1.0"
                    />


        </TableRow>
    </TableLayout>

    <View
            android:layout_width="20dp"
            android:layout_height="40dp"
            />

    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <TableRow
      android:layout_weight="1.0"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">
      <Button
        android:id="@+id/start"
        android:layout_weight="1.0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_jetty" />
      <Button
        android:id="@+id/stop"
        android:layout_weight="1.0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_jetty" />
    </TableRow>
    <TableRow
      android:layout_weight="1.0"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">
      <Button
        android:id="@+id/config"
        android:layout_weight="1.0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/config_jetty" />
      <Button
        android:id="@+id/download"
        android:layout_weight="1.0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_webapp" />
    </TableRow>
    <TableRow
      android:layout_weight="1.0"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">
      <Button
        android:id="@+id/hello"
        android:layout_weight="1.0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_ready" />
      <Button
        android:id="@+id/scan"
        android:layout_weight="1.0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan" />
      <!-- 
      <Button
        android:id="@+id/launch_any"
        android:layout_weight="1.0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/launch_any" />
         -->
    </TableRow>

    </TableLayout>

    <!--<TextView-->
     <!--android:id="@+id/console_heading"-->
     <!--android:layout_width="wrap_content"-->
     <!--android:layout_height="wrap_content"-->
     <!--android:textAppearance="@style/H1"-->
     <!--android:text="@string/console"/>  -->
     <!---->
  <!--<ScrollView-->
    <!--android:id="@+id/consoleScroller"-->
    <!--android:fillViewport="true"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="wrap_content">-->
    <!--<TextView-->
      <!--android:id="@+id/console"-->
      <!--android:textAppearance="@style/footer"-->
      <!--android:autoLink="none"-->
      <!--android:layout_width="fill_parent"-->
      <!--android:layout_height="wrap_content" />-->
  <!--</ScrollView>-->

     
</LinearLayout>

